EZP-30163: Fix icons alignment - ezkeyword, ezgmaplocation, ezobjectrelation, ezobjectrelationlistt

--- a/src/bundle/Resources/public/scss/fieldType/edit/_ezkeyword.scss
+++ b/src/bundle/Resources/public/scss/fieldType/edit/_ezkeyword.scss
@@ -2,7 +2,7 @@
     .ez-data-source__taggify {
         display: flex;
         flex-wrap: wrap;
-        padding-bottom: 0;
+        height: auto;
 
         &.ez-data-source__taggify--focused {
             border-color: $ez-color-secondary;
@@ -25,7 +25,6 @@
         display: block;
         outline: none;
         min-width: 100px;
-        padding-bottom: 8px;
         background: transparent;
     }
 
@@ -39,7 +38,7 @@
         background: $ez-color-secondary;
         padding: 4px 0 4px 8px;
         color: $ez-white;
-        margin: 0 8px 8px 0;
+        margin: 0 calculateRem(8px) 0 0;
         border-radius: .25rem;
     }
 
